<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#68BBCE"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/GPSfail"
                android:textColor="#A3D7E3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/domestic_hot"
                android:textColor="#A3D7E3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <com.example.dllo.myhunter.view.MyGridView
                    android:id="@+id/domestic_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:numColumns="4" />
            </LinearLayout>

            <TextView
                android:id="@+id/domestic_tv_qbcs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:text="@string/allcity"
                android:textColor="#A3D7E3" />

            <com.example.dllo.myhunter.view.VerticalListView
                android:id="@+id/domestic_allcity_verticalListView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>